* Slave configuration is now done exclusively from the master thread. Removed
  ec_master_sync_io(). Userspace threads are now waiting for events in the
  state machine.
* Master state machine scheduled with timeout if idle, otherwise is executed
  as fast as possible (with schedule()).
* Added dummy module for simulation purpuses.
* Removed EtherCAT line comments from 8139too drivers.

-------------------------------------------------------------------------------

Changes in version 1.2.0:

* Serveral fixes of bugs and stability issues. Master should now run fine
  with kernels 2.6.17 to 2.6.19.
* Realtime interface changes:
  - Re-introduced ecrt_domain_queue() to allow datagram queuing apart
    from datagram processing. The queuing of a domain's datagrams is not
    done in ecrt_domain_process() any more!
  - Removed ecrt_master_deactivate(). Its functionality was moved into
    ecrt_master_release().
  - Removed ecrt_master_prepare(). Its functionality was moved into
    ecrt_master_activate().
  - Renamed ecdev_start() and ecdev_stop() to ecdev_open() and ecdev_close().
    These two functions now take a pointer to ec_device_t as their arguments.
  - The data_ptr parameter of ecrt_domain_register_pdo(),
    ecrt_domain_register_pdo_list() and ecrt_domain_register_pdo_range() may
    not be NULL any more.
  - Removed ecrt_slave_pdo_size(). This function was deprecated long before.
  - Introduced ECRT_VERSION_MAGIC macro and ecrt_version_magic() function.
* Device interface changes:
  - ec_isr_t was replaced by ec_pollfunc_t, the device driver has to supply
    a poll function to call its ISR. This was introduced because some network
    drivers' interrupt functions have different arguments.
* State machines now try to re-send datagrams on datagram timeout.
* New option -c of the lsec script, displays slave current consumptions and
  remaining current.
* Added frame counter in master info file.
